--- a/mingw-w64-crt/lib64/msvcr80d.def.in
+++ b/mingw-w64-crt/lib64/msvcr80d.def.in
@@ -1306,7 +1306,7 @@ atan
 atan2 DATA ; overwritten
 atan2f DATA ; overwritten
 atanf DATA ; overwritten
-atexit DATA ; ovetwritten
+_crt_atexit == atexit ; rename atexit to _crt_atexit for compatibility with UCRT, real atexit function provided by mingw-w64
 atof
 atoi
 atol
