headers: Import webservices.h and weakreference.idl from Wine.
Signed-off-by: Jacek Caban <jacek@codeweavers.com>

--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -264,6 +264,7 @@ IDL_SRCS = \
   include/robuffer.idl \
   include/rtworkq.idl \
   include/vmr9.idl \
+  include/weakreference.idl \
   include/wincodec.idl \
   include/wincodecsdk.idl \
   include/wmcontainer.idl \
