--- a/mingw-w64-headers/Makefile.in
+++ b/mingw-w64-headers/Makefile.in
@@ -566,6 +566,7 @@ EXTRA_HEADERS = \
 @HAVE_WIDL_TRUE@  include/robuffer.idl \
 @HAVE_WIDL_TRUE@  include/rtworkq.idl \
 @HAVE_WIDL_TRUE@  include/vmr9.idl \
+@HAVE_WIDL_TRUE@  include/weakreference.idl \
 @HAVE_WIDL_TRUE@  include/wincodec.idl \
 @HAVE_WIDL_TRUE@  include/wincodecsdk.idl \
 @HAVE_WIDL_TRUE@  include/wmcontainer.idl \
