crt: Include __p__iob() symbol into x64 and ARM versions of msvcrt.dll
In file msvcrt.def.in is mentioned that symbol __p__iob is provided by
mingw-w64 emulation. But it is not yet. Functions __p__iob() and
__iob_func() returns same pointer to first member of _iob[] array, so
define __p__iob symbol for non-i386 builds as alias to __iob_func symbol.
Symbol __iob_func is present in all non-i386 versions of msvcrt.dll
library.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -482,7 +482,7 @@ F_I386(__p__dstbias)
 F_I386(__p__environ) ; x64 __p__environ provided by emu
 F_I386(__p__fileinfo)
 F_I386(__p__fmode) ; x64, arm32 and arm64 __p__fmode provided by emu
-F_I386(__p__iob) ; x64, arm32 and arm64 __p__iob provided by emu
+__p__iob F_NON_I386(== __iob_func) ; x64, arm32 and arm64 __p__iob provided by alias
 F_I386(__p__mbctype) ; x64, arm32 and arm64 __p__mbctype provided by emu
 F_I386(__p__osver)
 F_I386(__p__pctype) ; x64, arm32 and arm64 __p__pctype provided by emu
