--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -493,11 +493,15 @@ src_msvcrt64=\
   misc/__p__fmode.c \
   misc/__p__mbcasemap.c \
   misc/__p__mbctype.c \
+  misc/__p__osver.c \
   misc/__p__pctype.c \
   misc/__p__pgmptr.c \
   misc/__p__pwctype.c \
   misc/__p__wcmdln.c \
   misc/__p__wenviron.c \
+  misc/__p__winmajor.c \
+  misc/__p__winminor.c \
+  misc/__p__winver.c \
   misc/__p__wpgmptr.c \
   misc/_create_locale.c \
   misc/_free_locale.c \
@@ -527,10 +531,13 @@ src_msvcrtarm32=\
   misc/__p__fmode.c \
   misc/__p__mbcasemap.c \
   misc/__p__mbctype.c \
+  misc/__p__osver.c \
   misc/__p__pctype.c \
   misc/__p__pgmptr.c \
   misc/__p__pwctype.c \
   misc/__p__wcmdln.c \
+  misc/__p__winmajor.c \
+  misc/__p__winminor.c \
   misc/__p__wpgmptr.c \
   misc/_getpid.c \
   misc/__initenv.c \
@@ -637,10 +644,13 @@ src_msvcrtarm64=\
   misc/__p__fmode.c \
   misc/__p__mbcasemap.c \
   misc/__p__mbctype.c \
+  misc/__p__osver.c \
   misc/__p__pctype.c \
   misc/__p__pgmptr.c \
   misc/__p__pwctype.c \
   misc/__p__wcmdln.c \
+  misc/__p__winmajor.c \
+  misc/__p__winminor.c \
   misc/__p__wpgmptr.c \
   misc/_getpid.c \
   misc/__initenv.c \
@@ -664,9 +674,13 @@ src_crtdll=\
   misc/__p__environ.c \
   misc/__p__fmode.c \
   misc/__p__mbctype.c \
+  misc/__p__osver.c \
   misc/__p__pgmptr.c \
   misc/__p__pctype.c \
   misc/__p__pwctype.c \
+  misc/__p__winmajor.c \
+  misc/__p__winminor.c \
+  misc/__p__winver.c \
   misc/__pctype_func.c \
   misc/__pwctype_func.c \
   misc/__set_app_type.c \
@@ -721,9 +735,13 @@ src_msvcrt10=\
   misc/__p__commode.c \
   misc/__p__environ.c \
   misc/__p__fmode.c \
+  misc/__p__osver.c \
   misc/__p__pctype.c \
   misc/__p__pgmptr.c \
   misc/__p__pwctype.c \
+  misc/__p__winmajor.c \
+  misc/__p__winminor.c \
+  misc/__p__winver.c \
   misc/__pctype_func.c \
   misc/__pwctype_func.c \
   misc/__set_app_type.c \
