--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -484,7 +484,7 @@ F_I386(__p__fileinfo)
 F_I386(__p__fmode) ; x64, arm32 and arm64 __p__fmode provided by emu
 __p__iob F_NON_I386(== __iob_func) ; x64, arm32 and arm64 __p__iob provided by alias
 F_I386(__p__mbctype) ; x64, arm32 and arm64 __p__mbctype provided by emu
-F_I386(__p__osver)
+F_I386(__p__osver) ; x64, arm32 and arm64 __p__osver provided by emu
 F_I386(__p__pctype) ; x64, arm32 and arm64 __p__pctype provided by emu
 F_I386(__p__pgmptr) ; x64, arm32 and arm64 __p__pgmptr provided by emu
 F_I386(__p__pwctype) ; x64, arm32 and arm64 __p__pwctype provided by emu
@@ -492,9 +492,9 @@ F_I386(__p__timezone)
 F_I386(__p__tzname)
 F_I386(__p__wcmdln) ; x64, arm32 and arm64 __p__wcmdln provided by emu
 F_I386(__p__wenviron) ; x64 __p__wenviron provided by emu
-F_I386(__p__winmajor)
-F_I386(__p__winminor)
-F_I386(__p__winver)
+F_I386(__p__winmajor) ; x64, arm32 and arm64 __p__winmajor provided by emu
+F_I386(__p__winminor) ; x64, arm32 and arm64 __p__winminor provided by emu
+F_I386(__p__winver) ; x64 __p__winver provided by emu
 F_I386(__p__wpgmptr) ; x64, arm32 and arm64 __p__wpgmptr provided by emu
 __pioinfo DATA
 __pxcptinfoptrs
