crt: Define and use __p_ function for _osplatform
Global variable _osplatform for i386 is provided in new versions of
msvcrt.dll and then also in msvcr70.dll, msvcr71.dll and msvcr80.dll.
For x64 it is provided in all msvcrt.dll and msvcr80.dll versions.

Function __p__osplatform() which returns pointer to global variable
_osplatform is provided only in i386 and x64 versions of msvcr80.dll.

On ARM systems there is no _osplatform platform variable and neither
__p__osplatform() function. UCRT does not provide them for any arch.

Provide missing function __p__osplatform() for i386 and x64 versions of
msvcrt.dll, then for i386 msvcr70.dll and msvcr71.dll and change definition
of _osplatform in header file to use __p__osplatform() function.

This aligns definition with msvc and avoid referencing another global
variable from mingw-w64 header files.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -452,6 +452,7 @@ src_msvcrt32=\
   $(src_msvcrt_add_x86) \
   math/x86/_copysignf.c \
   misc/___mb_cur_max_func.c \
+  misc/__p__osplatform.c \
   misc/__pctype_func.c \
   misc/__pwctype_func.c \
   misc/_create_locale.c \
@@ -493,6 +494,7 @@ src_msvcrt64=\
   misc/__p__fmode.c \
   misc/__p__mbcasemap.c \
   misc/__p__mbctype.c \
+  misc/__p__osplatform.c \
   misc/__p__osver.c \
   misc/__p__pctype.c \
   misc/__p__pgmptr.c \
@@ -869,6 +871,7 @@ src_msvcrt40=\
   stdio/mingw_lock.c
 
 src_msvcr70=\
+  misc/__p__osplatform.c \
   misc/__sys_errlist.c \
   misc/__sys_nerr.c \
   misc/_configthreadlocale.c \
@@ -894,6 +897,7 @@ src_msvcr70=\
   stdio/mingw_lock.c
 
 src_msvcr71=\
+  misc/__p__osplatform.c \
   misc/__sys_errlist.c \
   misc/__sys_nerr.c \
   misc/_configthreadlocale.c \
