crt: Provide __p__winver() function also for ARM msvcrt.dll import library
ARM32 and ARM64 OS system version of msvcrt.dll do not have neither _winver
global variable, nor __p__winver() function. But they have _winmajor and
_winminor global variables.

Provide __p__winver() function emulation for ARM msvcrt import library via
via values of _winmajor and _winminor global variables.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -494,7 +494,7 @@ F_I386(__p__wcmdln) ; x64, arm32 and arm64 __p__wcmdln provided by emu
 F_I386(__p__wenviron) ; x64 __p__wenviron provided by emu
 F_I386(__p__winmajor) ; x64, arm32 and arm64 __p__winmajor provided by emu
 F_I386(__p__winminor) ; x64, arm32 and arm64 __p__winminor provided by emu
-F_I386(__p__winver) ; x64 __p__winver provided by emu
+F_I386(__p__winver) ; x64, arm32 and arm64 __p__winver provided by emu
 F_I386(__p__wpgmptr) ; x64, arm32 and arm64 __p__wpgmptr provided by emu
 __pioinfo DATA
 __pxcptinfoptrs
