crt: Provide __daylight(), __dstbias(), __timezone() and __tzname() functions for pre-msvcr80 builds
These functions return pointer to global variables with same name but
without the first leading underscore. These functions are available also
under name with leading "__p" prefix.

Functions __daylight(), __dstbias(), __timezone() and __tzname() are
available in msvcr80+ libraries and also in UCRT.

Functions __daylight(), __dstbias() are also available in later versions of
i386 and x64 msvcrt.dll and are available in all ARM versions of msvcrt.dll.

Functions __p__daylight(), __p__timezone() and __p__tzname() are available
since msvcrt20.dll and are present in all later msvcrt versions except the
UCRT and non-i386 OS system version of msvcrt.dll.

Function __p__dstbias() is available since msvcrt40.dll and is present also
in all later msvcrt versions except the UCRT and non-i386 OS system version
of msvcrt.dll.

Global variables _daylight, _timezone and _tzname are available in all
msvcrt versions except UCRT.

Global variable _dstbias is present since msvcrt40.dll, except UCRT and
non-i386 OS system versions of msvcrt.dll.

Define __daylight, __dstbias, __timezone and __tzname for all CRT import
libraries either as aliases to __p__daylight, __p__dstbias, __p__timezone,
and __p__tzname or as function wrappers around variables _daylight,
_dstbias, _timezone and _tzname, based on what each DLL library provides.

With this change also unifies time.h file to define _daylight, _dstbias,
_timezone and _tzname for all CRT builds via functions. This removes
another ifdef _UCRT and improves ABI compatibility between UCRT and
non-UCRT builds.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -484,6 +484,8 @@ src_msvcrt32=\
 src_msvcrt64=\
   $(src_msvcrt) \
   $(src_msvcrt_add_x86) \
+  misc/__daylight.c \
+  misc/__dstbias.c \
   misc/__p___argc.c \
   misc/__p___argv.c \
   misc/__p___wargv.c \
@@ -507,6 +509,8 @@ src_msvcrt64=\
   misc/__p__winminor.c \
   misc/__p__winver.c \
   misc/__p__wpgmptr.c \
+  misc/__timezone.c \
+  misc/__tzname.c \
   misc/_create_locale.c \
   misc/_free_locale.c \
   misc/_get_current_locale.c \
@@ -545,6 +549,8 @@ src_msvcrtarm32=\
   misc/__p__winminor.c \
   misc/__p__winver.c \
   misc/__p__wpgmptr.c \
+  misc/__timezone.c \
+  misc/__tzname.c \
   misc/_getpid.c \
   misc/__initenv.c \
   misc/__winitenv.c \
@@ -660,6 +666,8 @@ src_msvcrtarm64=\
   misc/__p__winminor.c \
   misc/__p__winver.c \
   misc/__p__wpgmptr.c \
+  misc/__timezone.c \
+  misc/__tzname.c \
   misc/_getpid.c \
   misc/__initenv.c \
   misc/__winitenv.c \
@@ -674,6 +682,7 @@ src_crtdll=\
   math/x86/_copysignf.c \
   misc/___mb_cur_max_func.c \
   misc/__badioinfo.c \
+  misc/__daylight.c \
   misc/__initenv.c \
   misc/__p___argc.c \
   misc/__p___argv.c \
@@ -697,6 +706,8 @@ src_crtdll=\
   misc/__set_app_type.c \
   misc/__sys_errlist.c \
   misc/__sys_nerr.c \
+  misc/__timezone.c \
+  misc/__tzname.c \
   misc/_configthreadlocale.c \
   misc/dummy__setusermatherr.c \
   misc/imaxabs.c \
@@ -737,6 +748,7 @@ src_msvcrt10=\
   misc/msvcrt10__ismbblead.c \
   misc/___mb_cur_max_func.c \
   misc/__badioinfo.c \
+  misc/__daylight.c \
   misc/__initenv.c \
   misc/__p___argc.c \
   misc/__p___argv.c \
@@ -759,6 +771,8 @@ src_msvcrt10=\
   misc/__set_app_type.c \
   misc/__sys_errlist.c \
   misc/__sys_nerr.c \
+  misc/__timezone.c \
+  misc/__tzname.c \
   misc/_configthreadlocale.c \
   misc/btowc.c \
   misc/dummy__setusermatherr.c \
