--- a/mingw-w64-crt/lib32/msvcrt20.def.in
+++ b/mingw-w64-crt/lib32/msvcrt20.def.in
@@ -1581,6 +1581,8 @@ _safe_fprem1
 #define NO_I64_FIXED_SIZE
 #define NO_FPOS64_ALIASES
 #define NO_STRCMPI_ALIAS
+#define NO_DSTBIAS
 #define WITH_NEXTAFTER_ALIAS
 #define WITH_IOB_FUNC_ALIAS
+#define WITH_TZ_ALIASES
 #include "crt-aliases.def.in"
