crt: Move ftime symbol definition from _ftime.c to crt-aliases.def.in
This simplify symbol definition and move it to the common place into
crt-aliases.def.in file where are also other symbol aliases.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -72,7 +72,12 @@ ADD_UNDERSCORE(fstat)
 F32(fstat == _fstat32)
 F64(fstat == _fstat64i32)
 #endif
-; ADD_UNDERSCORE(ftime)
+#ifdef FIXED_SIZE_SYMBOLS
+ADD_UNDERSCORE(ftime)
+#else
+F32(ftime == _ftime32)
+F64(ftime == _ftime64)
+#endif
 #if defined(UCRTBASE)
 ; HUGE alias and _HUGE variable are provided by math/_huge.c
 #elif defined(CRTDLL)
